[package]
name = "poke-engine"
version = "0.0.47"
authors = ["pmariglia <pmariglia@github.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A Pokemon battle engine that can be used to search through the state space of a Pokemon battle."

[lib]
name = "poke_engine"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "poke-engine"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "data/benchmark.rs"

[profile.release]
debug = 1

[dependencies]
dashmap = "6.1.0"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.9.3"

[features]
remove_low_chance_instructions = []
gen1 = []
gen2 = []
gen3 = []
gen4 = []
gen5 = []
gen6 = []
gen7 = []
gen8 = []
gen9 = []
terastallization = ["gen9"]

# Enables doubles battles (2 active Pokemon per side).
# Does not imply any generation; it is combined with gen4..gen9.
doubles = []

default = []

[workspace]
members = [
    "poke-engine-py"
]
